2023-05-13  Oliver Kiddle  <opk@zsh.org>

	* Felipe Contreras: 50612: Misc/vcs_info-examples: fix typo

	* github #98: Vidhan Bhatt: Completion/Darwin/Command/_shortcuts:
	feat: add `shortcuts` completions

2023-05-11  Bart Schaefer  <schaefer@zsh.org>

	* users/29070: Src/Zle/zle_tricky.c: clean up tokens in cmdstr
	before attempting completion (compctl only)

	* Jim <linux.tech.guy@gmail.com>: 51609: Doc/Zsh/mod_zselect.yo:
	fix reference to select(2)

	* Shohei YOSHIDA: 51340: Completion/Unix/Command/_rake: update
	for version 13

	* Shohei YOSHIDA: 51331: Completion/Unix/Command/_pydoc: update
	for version 3.11

2023-05-10  Bart Schaefer  <schaefer@zsh.org>

	* 51593: Functions/Misc/run-help: improve search for original
	command name after skipping prefix assignments

2023-05-08  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 51692: Test/C02cond.ztst: do not skip tests for [[ -r file ]]
	and [[ -N file ]] on Cygwin

2023-04-22  Bart Schaefer  <schaefer@zsh.org>

	* 51670: Src/text.c: prevent possible underflow in gettext()

2023-04-18  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 51663: Completion/Unix/Command/_ssh: fix a typo in 51582

2023-04-17  Peter Stephenson  <p.stephenson@samsung.com>

	* 51652 (plus typo correction): Src/exec.c, Test/C03traps.ztst:
	fix running of TRAPEXIT explicitly.

2023-04-11  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 51639: Doc/Zsh/params.yo, Src/init.c, configure.ac: add new
	parameter ZSH_EXEPATH that is set to the full pathname of the
	executable file of the current zsh

2023-04-09  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 51631: Doc/Zsh/params.yo, Src/init.c: initialize $_ by copying
	it from environment

	* 51632: Src/exec.c: unmetafy $_ when exporting it to child

2023-04-03  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 51597: Src/Zle/zle_utils.c: fix 'vared -c var' when var is unset

2023-03-30  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>
